--- a/Tms.MysticShop.Web/Views/Admin/Index.cshtml
+++ b/Tms.MysticShop.Web/Views/Admin/Index.cshtml
@@ -12,7 +12,7 @@
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
-    <link href="~/Assets/libs/fontware-some/all.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Theme style -->
     <link href="~/Assets/css/adminlte.min.css" rel="stylesheet" />
 </head>
@@ -869,6 +869,13 @@
     <script src="~/app/shared/modules/tmsmysticshop.common.js"></script>
     <script src="~/app/app.js"></script>
     <script src="~/app/components/home/homeController.js"></script>
+
+    <script src="~/app/shared/services/apiService.js"></script>
+    <script src="~/app/components/user_roles/userroles.module.js"></script>
+    <script src="~/app/components/user_roles/userRoleListController.js"></script>
+    <script src="~/app/components/users/user.module.js"></script>
+    <script src="~/app/components/users/userListController.js"></script>
+    <script src="~/app/shared/directives/pagerDirective.js"></script>
 </body>
 </html>
 
